improved smooth jump to make sure gems are detected, and added a score counter

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 }
 
 #grid {
+    position: relative;
     border-radius: 20px;
     border: 3px solid #000000;
     display: grid;
@@ -69,7 +70,7 @@ body {
 }
 
 .characterback {
-    background-color: #000000;
+    background-color: #ffffff;
     background-size: 100%;
 }
 
@@ -114,8 +115,25 @@ body {
     top: 20;
     left: 0px;
     z-index: 40;
+    display: none;
 }
 
 .gem {
     background-color: red;
 }
+
+#score {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #ffffff;
+    z-index: 40;
+    height: 30px;
+    width: 120px;
+    text-align: center;
+    line-height: 30px;
+    border: 2px solid #000;
+    border-radius: 8px;
+    font-weight: bold;
+  }
+  
